--- a/package.json
+++ b/package.json
@@ -8,12 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@crazydos/vue-markdown": "^1.0.2",
+    "bootstrap-icons-vue": "^1.11.3",
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.7",
+    "marked-highlight": "^2.2.1",
+    "marked-katex-extension": "^5.1.4",
+    "mermaid": "^11.5.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-react": "^8.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-class-static-block": "^7.26.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
