--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@crazydos/vue-markdown": "^1.0.2",
     "bootstrap-icons-vue": "^1.11.3",
     "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
+    "express": "^4.21.2",
     "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
     "marked-highlight": "^2.2.1",
@@ -23,6 +25,7 @@
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "serve-static": "^1.16.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
