--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@crazydos/vue-markdown": "^1.0.2",
+    "@tailwindcss/cli": "^4.0.14",
+    "@vueup/vue-quill": "^1.2.0",
     "bootstrap-icons-vue": "^1.11.3",
     "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
@@ -19,14 +21,20 @@
     "marked-highlight": "^2.2.1",
     "marked-katex-extension": "^5.1.4",
     "mermaid": "^11.5.0",
+    "quill": "^2.0.3",
+    "quill-mention": "^6.0.2",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^7.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "serve-static": "^1.16.2",
+    "streaming-markdown": "^0.2.2",
     "vue": "^3.2.13",
+    "vue-quill-editor": "^3.0.6",
+    "vue-quilly": "^1.1.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
@@ -36,8 +44,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14"
   },
   "eslintConfig": {
     "root": true,
