--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "express": "^4.21.2",
     "highlight.js": "^11.11.1",
+    "konva": "^9.3.20",
     "marked": "^15.0.7",
     "marked-highlight": "^2.2.1",
     "marked-katex-extension": "^5.1.4",
@@ -30,9 +31,13 @@
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "remark-preset-lint-markdown-style-guide": "^6.0.1",
+    "remark-stringify": "^11.0.0",
     "serve-static": "^1.16.2",
     "streaming-markdown": "^0.2.2",
     "vue": "^3.2.13",
+    "vue-drawing-canvas": "^1.0.14",
+    "vue-konva": "^3.2.0",
     "vue-quill-editor": "^3.0.6",
     "vue-quilly": "^1.1.3",
     "vue-router": "^4.5.0"
@@ -48,6 +53,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.5.3",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^4.0.14"
   },
   "eslintConfig": {
